[package]
name = "flash_loan_receiver"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flash_loan_receiver"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []
test-oracle = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed", "idl-build"] }
anchor-spl = { version = "0.31.1", features = ["token_2022", "idl-build"] }