[package]
name = "lending_protocol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lending_protocol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []
test-oracle = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed", "idl-build"] }
anchor-spl = { version = "0.31.1", features = ["token_2022", "idl-build"] }
pyth-sdk-solana = "0.10.6"
pyth-sdk = "0.8.0"
bytemuck = "1.22.0"
spl-math = { version = "0.3.0", features = ["no-entrypoint"] }
